# jewelvm

./: LICENSE  LICENSE.in  Makefile.am  README.in  acinclude.m4  bootclean  bootstrap  configure.ac
classes/: MANIFEST.MF.in  Makefile.am
classes/java/: Makefile.am
classes/java/lang/: Machinery.java  Makefile.am  MethodText.java  builtin.java
classes/jewel/: Makefile.am
classes/jewel/arch/: Makefile.am
classes/jewel/arch/i386/: Makefile.am  i386_Addr.java  i386_AddressingModes.java  i386_Architecture.java  i386_Backend.java  i386_BinaryAssembler.java  i386_CodeGenerator.ring  i386_FlowAssembler.java  i386_Imm.java  i386_InstructionSet.java  i386_Opc.java  i386_Opcodes.java  i386_Reg.java  i386_RegisterAllocator.java  i386_RegisterSet.java
classes/jewel/core/: ClassID.java  ConstraintNamespace.java  Context.java  ContextClassInfo.java  ContextProxy.java  ConvertedMethod.java  Jewel.java  LoadedClass.java  LoadedClassInfo.java  LoadedProxy.java  Main.java  Makefile.am  MethodID.java  RegisteredClass.java  RegisteredClassInfo.java  RegisteredProxy.java  SHA1.java
classes/jewel/core/bend/: Addr.java  Assembler.java  Backend.java  BinaryAssembler.java  Binder.java  CodeGenerator.java  CodeOutput.java  Extern.java  FlowAssembler.java  Imm.java  Label.java  Makefile.am  MethodEntry.java  Opc.java  Reg.java  RegisterAllocator.java  Relocatable.java  RelocatableFactory.java  StringRef.java  Symbol.java  SymbolTable.java  SymbolicType.java  VirtReg.java
classes/jewel/core/cache/: Cache.java  CacheKey.java  CacheMissException.java  CacheObject.java  CacheServer.java  ConstructionCircularityException.java  ConstructionTargetException.java  DelegateCache.java  FileCache.java  JarCache.java  KeyReference.java  Makefile.am  PersistentCache.java  ProxyObject.java  RawCache.java  RemoteCache.java  SoftCache.java  Streamable.java
classes/jewel/core/clfile/: AbstractMethodException.java  Bytecode.java  BytecodeVerifier.java  ClassCircularityException.java  ClassFile.java  ClassFileConstants.java  ClassFormatException.java  ClassInfo.java  ClassInfoLoader.java  ClassPath.java  FilterClassInfo.java  IncompatibleClassChangeException.java  LinkageException.java  Makefile.am  Namespace.java  NoClassDefFoundException.java  Syntax.java  UnsupportedClassVersionException.java  VerifyException.java
classes/jewel/core/jiro/: ArrayLengthPropagation.ring  BranchOptimizations.java  CFGBuilder.java  Canonicalization.ring  CodeMotion.ring  ConditionTightening.ring  ConstantFolding.ring  ConstantPropagation.ring  CopyPropagation.ring  CriticalEdgeSplitting.ring  CrossJumping.java  DeadArmRemoval.ring  DeadCodeElimination.ring  ExpressionBreaking.ring  ExpressionBuilding.ring  GlobalValueNumbering.ring  IR.java  IRBasicBlock.java  IRBinder.ring  IRCFG.java  IRControlEdge.java  IRConverter.java  IROptimizer.java  IRStatement.java  IfRemoval.ring  InitializationRemoval.ring  LiveVariables.ring  LoadPrefetching.ring  LocalCopyPropagation.ring  LoopPeeling.ring  Makefile.am  Measure.java  NonNullPointers.ring  ObjectExplosion.ring  PathFolding.ring  PathForwarding.ring  ProcedureIntegration.ring  ReachingDefinitions.ring  RegisterAllocating.ring  RegisterPacking.ring  (+7 more)
classes/jewel/core/jiro/beg/: Makefile.am  TreeNode.java
classes/jewel/core/jiro/control/: BasicBlock.java  ControlEdge.java  ControlFlowGraph.java  ControlTree.java  DominatorTree.java  LoopTree.java  Makefile.am  Statement.java
classes/jewel/core/jiro/dataflow/: BitFunction.java  BitItem.java  DataFlowAnalyser.java  DataFlowAnalysis.java  IterativeDataFlowAnalyser.java  Makefile.am
classes/jewel/core/jiro/graph/: ConflictGraph.java  DirectedGraph.java  Graph.java  Makefile.am  UndirectedGraph.java
classes/jewel/core/jiro/optimize/: Makefile.am  Optimization.java  Optimizer.java
classes/jewel/tools/: Makefile.am
classes/jewel/tools/cfdump/: Dumper.java  Main.java  Makefile.am
classes/jewel/tools/jewelg/: Actions.java  AssemblyImageOutputStream.java  BinaryImageOutputStream.java  Closure.ring  ImageOutputStream.java  Machine.java  Main.java  Makefile.am
classes/jewel/tools/jewelq/: Main.java  Makefile.am
classes/jewel/tools/jiff/: JClass.java  JMachine.java  Main.java  Makefile.am
include/: Makefile.am  jni.h
launcher/: Makefile.am  jewel.1.in  jewel.c  jeweld.1.in  jeweld.c
native/: Makefile.am  builtin.c
runtime/: Makefile.am  arch.c  arch.h  callback.c  compat.c  gc.c  gcheap.h  gni.c  heap.c  hstructs.h  jni.c  jnivm.h  monman.c  monman.h  plaf.c  plaf.h
