# JEWEL, Java Environment With Enhanced Linkage
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

SUBDIRS=bend cache clfile jiro
JAVAROOT=$(top_builddir)/classes
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	ClassID.java\
	ConstraintNamespace.java\
	Context.java\
	ContextClassInfo.java\
	ContextProxy.java\
	ConvertedMethod.java\
	Jewel.java\
	LoadedClass.java\
	LoadedClassInfo.java\
	LoadedProxy.java\
	Main.java\
	MethodID.java\
	RegisteredClass.java\
	RegisteredClassInfo.java\
	RegisteredProxy.java\
	SHA1.java
