# JEWEL, Java Environment With Enhanced Linkage
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

JAVAROOT=$(top_builddir)/classes
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	Addr.java\
	Assembler.java\
	Backend.java\
	BinaryAssembler.java\
	Binder.java\
	CodeGenerator.java\
	CodeOutput.java\
	Extern.java\
	FlowAssembler.java\
	Imm.java\
	Label.java\
	MethodEntry.java\
	Opc.java\
	Relocatable.java\
	RelocatableFactory.java\
	Reg.java\
	RegisterAllocator.java\
	StringRef.java\
	Symbol.java\
	SymbolicType.java\
	SymbolTable.java\
	VirtReg.java
