# JEWEL, Java Environment With Enhanced Linkage
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

JAVAROOT=$(top_builddir)/classes
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	Cache.java\
	CacheKey.java\
	CacheMissException.java\
	CacheObject.java\
	CacheServer.java\
	ConstructionCircularityException.java\
	ConstructionTargetException.java\
	DelegateCache.java\
	FileCache.java\
	JarCache.java\
	KeyReference.java\
	PersistentCache.java\
	ProxyObject.java\
	RawCache.java\
	RemoteCache.java\
	SoftCache.java\
	Streamable.java
