# JEWEL, Java Environment With Enhanced Linkage
# Copyright (c) 1998-2004, Rodrigo Augusto Barbato Ferreira

JAVAROOT=$(top_builddir)/classes
EXTRA_DIST=$(noinst_JAVA)

noinst_JAVA=\
	AbstractMethodException.java\
	Bytecode.java\
	BytecodeVerifier.java\
	ClassCircularityException.java\
	ClassFile.java\
	ClassFileConstants.java\
	ClassFormatException.java\
	ClassInfo.java\
	ClassInfoLoader.java\
	ClassPath.java\
	FilterClassInfo.java\
	IncompatibleClassChangeException.java\
	LinkageException.java\
	Namespace.java\
	NoClassDefFoundException.java\
	Syntax.java\
	UnsupportedClassVersionException.java\
	VerifyException.java
